--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
+	"predeploy": "rm -rf dist && parcel build index.html --public-url /conways-game-of-life",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.2.0",
+    "gh-pages": "^2.1.1",
     "parcel-bundler": "^1.6.1"
   },
   "keywords": []
