--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
 	"predeploy": "rm -rf dist && parcel build index.html --public-url /conways-game-of-life",
     "deploy": "gh-pages -d dist"
   },
